--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,72 +1,144 @@
+
+
+/* fonts */
+@import url('https://fonts.googleapis.com/css?family=Shadows+Into+Light|Luxurious+Roman');
+:root{--heading-font: "Shadows Into Light";
+--paragraph-font: "Luxurious Roman";
+}
+
+
+/* Variables */
+:root { --primary-color: #003049}
+:root { --background: #fcfbfb}
+:root { --hover: #EF8354 }
+:root { --text: white }
+:root { --header: #d9c2a3 } 
+
+/* spacing */
+.logo{padding: 10px}
+nav a  { padding: 12px;}
+.book, .join  { padding: 15px 30px;    
+    border-radius: 5px;
+}
+.icon  { padding-top: 10px;}
+.msg  { padding: 35px;}
+.msg p  { padding-bottom: 15px;}
+footer   {padding: 25px 50px;}
+footer .social img   {padding-top: 15px;}
+.home-title  { margin-top: 10px;}
+.book, .join  { margin-top: 50px;}
+.rivers-card, .camping-card, .rapids-card  { margin: 200px 0;}
+footer   {margin-top: 200px;}
+.card-img {
+    border: 10px solid #d9c2a3;
+}
+main section img {
+    box-sizing: border-box;
+}
+
+body {
+    background-color: var(--background);
+    font-family: var(--paragraph-font);
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
+}
+h2 {
+    margin: 0;
+}
 #content {
     max-width: 1600px;
     margin: 0 auto;
-    text-align: center;
 }
 
-nav { text-align: center;}
-a { text-align: center;}
+
+/* Header */
+.home-title {
+    font-family: var(--heading-font);
+    font-size: 2em;
+}
+header{background-color: var(--primary-color)}
+nav a{ 
+    text-align: center;
+    background-color: var(--primary-color);
+    color: var(--header);
+}
+nav a:hover{background-color: var(--hover);
+    color: var(--text);
+}
+.logo { width: 80px}
+.button-box{
+    text-align: center;
+    font-size: 18px;
+    color: #fcfbfb;
+    text-decoration: none;}
+        
+
+/* Hero */
+#hero-img { width: 100%;}
 #hero-msg h1 { text-align: center;}
 #hero-msg h4{ text-align: center;}
-.button-box{ text-align: center;}
-main section{ text-align: center;}
 
 
-#background {
-    height: 725px;
-}
-
-body{background-color: #fcfbfb;}
-
-header{background-color: #003049;}
-
+/* Main */
+header{background-color: #003049 }
+.home-grid{ text-align: center}
+nav a{ 
+    text-align: center;
+    background-color: #003049;
+    color: #d9c2a3;}
+nav a:hover{background-color: #EF8354;;
+        color: #d9c2a3;}
 nav a:hover{background-color: #EF8354;}
 
-.book{background-color: #fcfbfb;}
 
-.join{background-color: #fcfbfb;}
+/* MSG */
+#background{
+    height: 725px;
+    background-color: var(--header);
+}
+.msg{background-color: var(--primary-color);}
+.msg p{background-color: var(--primary-color);
+    font-size: .8em;
+    color: white}
+.msg a{background-color: var(--primary-color);
+    color: white}
+.msg h2{background-color: var(--primary-color);
+    font-family: var(--heading-font);
+    color: #d9c2a3}
+nav a{
+    text-align: center;
+    color: #fcfbfb;
+    text-decoration: none;}
 
-.book:hover{background-color: #EF8354}
-
-.join:hover{background-color: #EF8354;}
-
-#background{background-color: #003049;}
-
-.msg{background-color: #fcfbfb;}
-
-footer{background-color: #003049;}
-
-
-
-
-nav a{background-color: #003049;
-    color: #d9c2a3;}
-
-nav a:hover{background-color: #EF8354;;
-    color: #d9c2a3;}
-
-.home-title{background-color: #003049;
-    color: #d9c2a3;}
-
-h4{background-color: #003049;
-    color: #d9c2a3;}
-
-.book, .join{background-color: #003049;
+.join{
+    text-align: center;
+    font-size: 18px;
+    color: #fcfbfb;
+    text-decoration: none;}
+footer a{
+    text-align: center;
+    color: #fcfbfb;
+    text-decoration: none;
+}
+.book, .join{--primary-color: ;
     color: #d9c2a3;}
 
 .book:hover{background-color: #003049;
     color: #d9c2a3;}
 
 .join:hover{background-color: #EF8354;
-    color: #d9c2a3;}
+    color: #d9c2a3;
+}
 
-.msg h2{background-color: #003049;
-    color: #d9c2a3;}
 
-.msg p{background-color: #003049;
-    color: #d9c2a3;}
+
+
+/* footer */
+footer {background-color: #003049;}
 
 footer h3{background-color: #003049;
+    font-family: var(--header);
     color: #d9c2a3;}
 
 footer a{background-color: #003049;
@@ -75,31 +147,6 @@ footer a{background-color: #003049;
 footer a:hover{background-color: #EF8354;
     color: #d9c2a3;}
 
+.icon {width: 80px; }
 
-.icon {
-    width: 80px;
-}
 
-.logo{width: 80px}
-
-#hero-img {
-    width: 40px;
-}
-
-nav a{
-    text-align: center;
-    color: #fcfbfb;
-    text-decoration: none;}
-
-.book{
-    text-align: center;
-    color: #fcfbfb;
-    text-decoration: none;}
-.join{
-    text-align: center;
-    color: #fcfbfb;
-    text-decoration: none;}
-footer a{
-    text-align: center;
-    color: #fcfbfb;
-    text-decoration: none;}
