--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -57,16 +57,31 @@ h2 {
     font-family: var(--heading-font);
     font-size: 2em;
 }
-header{background-color: var(--primary-color)}
+header{
+    background-color: var(--primary-color);
+    display: grid;
+    grid-template-columns: 150px auto;
+}
+nav{
+    display: flex;
+    justify-content: space-around;
+}
 nav a{ 
     text-align: center;
     background-color: var(--primary-color);
     color: var(--header);
+    text-decoration: none;
+    padding: 35px;
 }
 nav a:hover{background-color: var(--hover);
     color: var(--text);
 }
-.logo { width: 80px}
+.logo { width: 80px
+}
+#logo_link{    
+    padding-top: 5px;
+    justify-self: center;
+    align-self: center;}
 .button-box{
     text-align: center;
     font-size: 18px;
@@ -75,14 +90,43 @@ nav a:hover{background-color: var(--hover);
         
 
 /* Hero */
-#hero-img { width: 100%;}
-#hero-msg h1 { text-align: center;}
-#hero-msg h4{ text-align: center;}
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px; 
+}
+
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+    }
+#hero-img{
+    width: 100%;
+    height: 100%;}
+#hero-msg h1 { 
+    text-align: center;
+    color: #d9c2a3;
+}
+#hero-msg h4{ 
+    text-align: center;
+    color: white;
+}
 
 
 /* Main */
 header{background-color: #003049 }
-.home-grid{ text-align: center}
+.home-grid{ 
+    text-align: center;
+    display: grid;
+    grid-template-columns: repeat(10, 1fr) ;
+}
 nav a{ 
     text-align: center;
     background-color: #003049;
@@ -90,6 +134,29 @@ nav a{
 nav a:hover{background-color: #EF8354;;
         color: #d9c2a3;}
 nav a:hover{background-color: #EF8354;}
+
+.card-img, .mountains {
+    width: 100%;
+}
+.rivers-card {
+    grid-column: 2/4;
+    grid-row: 2/3;}
+.camping-card{
+    grid-column: 5/7;
+    grid-row:2/3;} 
+.rapids-card{
+    grid-column: 8/10;
+    grid-row:2/3;
+} 
+#background {
+    grid-column: 1/11; 
+    grid-row: 4/9; }
+
+.mountains{grid-column: 2/7;
+grid-row: 5/8;} 
+
+.msg {grid-column: 6/10; 
+    grid-row: 6/7;}
 
 
 /* MSG */
@@ -121,10 +188,10 @@ footer a{
     color: #fcfbfb;
     text-decoration: none;
 }
-.book, .join{--primary-color: ;
+.book, .join{
     color: #d9c2a3;}
 
-.book:hover{background-color: #003049;
+.book:hover{background-color: #EF8354;
     color: #d9c2a3;}
 
 .join:hover{background-color: #EF8354;
@@ -135,10 +202,15 @@ footer a{
 
 
 /* footer */
-footer {background-color: #003049;}
+footer {background-color: #003049;
+    padding: 25px 50px;
+    margin-top: 200px; 
+    display: flex;
+    justify-content: space-around;
+    align-items: center;}
 
 footer h3{background-color: #003049;
-    font-family: var(--header);
+    font-family: var(--heading-font);
     color: #d9c2a3;}
 
 footer a{background-color: #003049;
@@ -150,3 +222,69 @@ footer a:hover{background-color: #EF8354;
 .icon {width: 80px; }
 
 
+.card-img {
+    border: 10px solid #d9c2a3;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #003049;
+}
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+
+.msg {
+    background-color: #003049;
+    padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #003049;
+}
+.mountains {
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #003049;
+}
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+        color: black
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
+}
