--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -324,9 +324,9 @@ footer a:hover{background-color: #EF8354;
 .rates-grid{
     padding: 40px;
     display: grid;
-    grid-template-columns: 1fr, 2fr;
+    grid-template-columns: 1fr 1fr 1fr;
     gap: 20px;
-    grid-auto-rows:1fr, 1fr, 1fr;
+    grid-auto-rows:1fr 1fr;
 }
     .canyon-three-img {
         height:250px;
