--- a/demos/components/aboutme.html
+++ b/demos/components/aboutme.html
@@ -9,7 +9,7 @@
 
     <body>
         <h1>About Me!</h1>
-        <img src="images/me.PNG"
+        <img src="photos/me.PNG"
             width="255" 
             height="400" />
         <h2>Ethan Smith</h2>
