--- a/demos/components/index.html
+++ b/demos/components/index.html
@@ -7,13 +7,15 @@
 </head>
 <body>
 
-<h2>Opacity with Box</h2>
+<h2>Web Components Project</h2>
 <p>Hover over the image to see the effect.</p>
 
 <div class="container">
   <img src="photos/me.PNG" alt="Avatar" class="image" style="width:100%">
   <div class="middle">
-    <div class="text">John Doe</div>
+    <div class='button-box'>
+      <a class='about-me' href="aboutme.html">Ethan Smith</a>
+  </div>
   </div>
 </div>
   
