--- a/personal-site/styles/style.css
+++ b/personal-site/styles/style.css
@@ -67,8 +67,6 @@ nav a:hover{background-color: var(--hover);
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
-    padding-top: 10px;
-    padding: 10px;
 
 }
 
@@ -82,6 +80,7 @@ nav a:hover{background-color: var(--hover);
     grid-column: 1/3;
     grid-row: 2;
     margin-top: 100px;
+    background-color: var(--primary-color);
     }
 
 #hero-img-one {
@@ -90,12 +89,12 @@ nav a:hover{background-color: var(--hover);
 
 #hero-msg-one h1 { 
     text-align: center;
-    color: var(--primary-color);
+    color: var(--header);
     font-family: var(--heading-font);
 }
 #hero-msg-one h4{ 
     text-align: center;
-    color: var(--primary-color);
+    color: var(--header);
     font-family: var(--paragraph-font);
 }
 
@@ -104,8 +103,6 @@ nav a:hover{background-color: var(--hover);
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
-    padding-top: 10px;
-    padding: 10px;
 }
 
 #hero-box-two{
@@ -118,6 +115,7 @@ nav a:hover{background-color: var(--hover);
     grid-column: 2/4;
     grid-row: 2;
     margin-top: 100px;
+    background-color: var(--primary-color);
     }
 
 #hero-img-two {
@@ -127,12 +125,12 @@ nav a:hover{background-color: var(--hover);
 
 #hero-msg-two h1 { 
     text-align: center;
-    color: var(--primary-color);
+    color: var(--header);
     font-family: var(--heading-font);
 }
 #hero-msg-two h4{ 
     text-align: center;
-    color: var(--primary-color);
+    color: var(--header);
     font-family: var(--paragraph-font);
 }
 
@@ -237,4 +235,163 @@ a:hover{background-color: var(--hover);
 }
 
 
+
+
+/* training-hero */
+#training-hero{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+}
+
+#hero-train-img {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+    padding-top: 10px;
+    padding: 10px;
+}
+
+.msg-training {
+    grid-column: 3/4;
+    grid-row: 1/3;
+    margin-top: 100px;
+    margin-bottom: 350px;
+    margin-right: 20px;
+    background-color: var(--primary-color);
+    text-align: center;
+    }
+
+.journey-img {
+    width: 100%;
+    height: 100%;
+    transform: scaleX(-1);}
+
+#msg-training h1 { 
+    text-align: center;
+    color: var(--header);
+    font-family: var(--heading-font);
+}
+#msg-training h4{ 
+    text-align: center;
+    color: var(--header);
+    font-family: var(--paragraph-font);
+}
+.coaching:hover{
+    font-size: 25px;
+    background-color: var(--hover);
+    text-decoration: none;
+    border-radius: 5px;
+
+}
+
+
+
+/* training-grid */
+.training-grid{ 
+    padding-top: 20px;
+    margin: 20px;
+    text-align: center;
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+}
+.container-one, .container-two, .container-three {
+    position: relative;
+  }
+.short-img, .mid-img, .dist-img {
+    opacity: 1;
+    display: block;
+    width: 100%;
+    height: auto;
+    transition: .5s ease;
+    backface-visibility: hidden;
+  }
+  .middle-one, .middle-two, .middle-three {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+  }
+
+  .container-one:hover .short-img{
+    opacity: 0.3;
+  }
+  .container-one:hover .middle-one{
+    opacity: 1;
+  }
+
+ .container-two:hover .mid-img{
+    opacity: 0.3;
+  }
+  .container-two:hover .middle-two{
+    opacity: 1;
+  }
+  
+ .container-three:hover .dist-img {
+    opacity: 0.3;
+  }
+  .container-three:hover .middle-three{
+    opacity: 1;
+  }
+
+
+  
+.training-plan-speed {
+    grid-column: 2/4;
+    grid-row: 2/3;}
+
+.training-plan-mid{
+    grid-column: 5/7;
+    grid-row:2/3;} 
+
+.training-plan-long{
+    grid-column: 8/10;
+    grid-row:2/3;
+} 
+
+.training-grid h3 {
+    color: var(--primary-color);
+    font-family: var(--heading-font);
+}
+.training-grid p {
+    color: var(--primary-color);
+    font-family: var(--paragraph-font);
+}
+
+
+
+.middle-box{
+    font-size: 12px;
+    background-color: var(--primary-color);
+    color: var(--header);
+    text-decoration: none;
+    border-radius: 5px;
+}
+
+.middle-box:hover {
+    font-size: 18px;
+    background-color: var(--hover);
+    color: var(--header);
+    text-decoration: none;
+    border-radius: 5px;
+}
+.middle-box a{
+    font-size: 12px;
+    background-color: var(--primary-color);
+    color: var(--header);
+    text-decoration: none;
+    border-radius: 5px;
+}
+
+.middle-box:hover a{
+    font-size: 18px;
+    background-color: var(--hover);
+    color: var(--header);
+    text-decoration: none;
+    border-radius: 5px;
+}
 
