--- a/personal-site/styles/style.css
+++ b/personal-site/styles/style.css
@@ -389,3 +389,160 @@ a:hover{background-color: var(--hover);
     border-radius: 5px;
 }
 
+/* coaching hero */
+#coaching-hero{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    height: 300px;
+}
+
+.background{
+    grid-column: 1/4;
+    grid-row: 1/2;
+    background-color: var(--text);
+}
+#coach-msg {
+    grid-column: 3/4;
+    grid-row: 1/3;
+    margin: 10px;
+    padding: 10px;
+    background-color: var(--background);
+    text-align: center;
+    }
+
+.train-box a{
+    background-color: var(--background);
+    border-radius: 5px;
+}
+.train-box:hover a{
+    background-color: var(--hover);
+    border-radius: 5px;
+}
+
+/* coaching form */
+
+.coaching-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    margin-top: -5px
+}
+
+.coaching-staff {
+    grid-column: 1/3;
+    grid-row: 1/3;
+    z-index: -1;
+    padding: 10px;
+    margin: 5px;
+}
+
+.coaching-form{
+    grid-column: 3/5;
+    grid-row: 1/3;
+    text-align: center;
+    padding: 10px;
+    margin: 5px;
+    }
+
+.staff-photo {
+    width: 100%;
+    height: 100%;
+    transform: scaleX(-1);}
+
+.coaching-grid h3 {
+        color: var(--primary-color);
+        font-family: var(--heading-font);
+    }
+.coaching-grid p{
+        color: var(--primary-color);
+        font-family: var(--paragraph-font);
+    }
+
+
+
+
+/* form */
+.coaching-form {padding: 50px;}
+.coaching-form form {
+    /* Center the form on the page */
+    margin: 0 auto;
+    width: 300px;
+    /* Form outline */
+    padding: 40px;
+    border: 1px solid var(--background);
+    border-radius: 1em;
+  }
+  
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .coaching-form form li + li {
+    margin-top: 1em;
+  }
+  
+  .coaching-form label {
+    /* Uniform size & alignment */
+    display: inline-block;
+    width: 90px;
+    text-align: right;
+    color: var(--primary-color);
+  }
+  
+  .coaching-form
+  input,
+  textarea {
+    /* To make sure that all text fields have the same font settings
+       By default, textareas have a monospace font */
+    font: 18px var(--paragraph-font);
+  
+    /* Uniform text field size */
+    width: 300px;
+    box-sizing: border-box;
+  
+    /* Match form field borders */
+    border: 1px solid var(--background);
+  }
+  
+  .coaching-form
+  input:focus,
+  textarea:focus {
+    /* Additional highlight for focused elements */
+    border-color: var(--primary-color);
+  }
+  
+  .coaching-form textarea {
+    /* Align multiline text fields with their labels */
+    vertical-align: top;
+  
+    /* Provide space to type some text */
+    height: 5em;
+  }
+  
+  .coaching-form .button {
+    /* Align buttons with the text fields */
+    padding-left: 90px; /* same size as the label elements */
+  }
+  
+  .coaching-form button {
+    /* This extra margin represent roughly the same space as the space
+       between the labels and their text fields */
+    margin-left: .5em;
+  }
+
+  #feedback {
+    background-color: var(--header);
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: .5em;
+    /* make this element invisible until we are ready for it */
+    display: none;       
+}
+.moveDown {
+    margin-top: 3em;
+}
